--- a/styles.css
+++ b/styles.css
@@ -1,60 +1,45 @@
-@import url('https://fonts.googleapis.com/css2?family=Martel+Sans:wght@200;300;400;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Martel+Sans:wght@600&family=Poppins:wght@300;400;700&display=swap');
 
+* {
+    padding: 0;
+    margin: 0;
+    font-family: 'Poppins', sans-serif;
+}
 
 body {
     background-color: black;
 }
 
-* {
-    margin: 0;
-    padding: 0;
-    font-family: 'Poppins', sans-serif;
-}
-
 .main {
-    background-image: url("images/Netflix images/bg.jpg");
-    
-    height: 80vh;
+    background-image: url("assets/images/bg.jpg");
     background-position: center center;
-    position: relative;
-    background-repeat: no-repeat;
     background-size: max(1200px, 100vw);
-
-
-
+    background-repeat: no-repeat;
+    height: 644px;
+    position: relative;
 }
 
 .main .box {
-    height: 100%;
+    height: 644px;
     width: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
+    opacity: 0.69;
     position: absolute;
     top: 0;
-    /* z-index: 1; */
-    
+    background-color: black;
 }
 
 nav {
-    max-width: 70vw;
-    padding: 50px 500px 48px;
-    display: flex;
+    max-width: 60vw;
     justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    height: 100px;
-
-}
-nav div{
+    margin: auto;
     display: flex;
-    gap: 20px;
-    
+    align-items: center;
+    height: 100px;
 }
 
 nav img {
     color: red;
-    
-    width: 390px;
-    height: auto;
+    width: 130px;
     position: relative;
     z-index: 10;
 }
@@ -62,90 +47,71 @@ nav img {
 nav button {
     position: relative;
     z-index: 10;
-    border-radius: 8px;
 }
 
 .hero {
     font-family: 'Martel Sans', sans-serif;
-    display: flex;
     height: calc(100% - 100px);
-    justify-content: center;
+    display: flex;
     align-items: center;
-    color: white;
+    justify-content: center;
     flex-direction: column;
+    color: white;
     position: relative;
     gap: 23px;
     padding: 0 30px;
-    /* z-index: 2; */
-
-
 }
+
 .hero> :nth-child(1) {
+    font-family: 'Poppins', sans-serif;
+    font-weight: bolder;
     font-size: 48px;
-    font-weight: 900;
+    text-align: center;
 }
+
 .hero> :nth-child(2) {
+    font-weight: 400;
     font-size: 24px;
-    font-weight: 400;
+    text-align: center;
 }
+
 .hero> :nth-child(3) {
-    font-size: 20px;
     font-weight: 400;
+    font-size: 20px;
+    text-align: center;
 }
-
-
-
 
 .separation {
     height: 7px;
-    /* height: 190px; */
-    background-color: grey;
+    background-color: rgb(46, 44, 44);
     position: relative;
     z-index: 20;
 }
 
 .btn {
-    padding: 30px 100px 10px 15px;
-    font-weight: 700;
-    font-size: 82px;
+    padding: 3px 8px;
+    font-weight: 400;
     color: white;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(248, 243, 243, 0.021);
+    border-radius: 4px;
     border: 1px solid white;
-    border-radius: 23px;
     cursor: pointer;
-}
 
-.btn-red-sm {
-    padding: 30px 100px 10px 15px;
-    font-size: 54px;
-    font-weight: 700;
-    background-color: red;
-    color: white;
-    border: none;
-    border-radius: 23px;
-    cursor: pointer;
 }
-
 
 .btn-red {
     background-color: red;
     color: white;
-    padding: 3px 54px;
-    font-size: 120px;
+    padding: 3px 24px;
+    font-size: 20px;
     border-radius: 4px;
     font-weight: 400;
 }
 
-.main input {
-    padding: 7px 120px 9px 19px;
+.btn-red-sm {
+    background-color: red;
     color: white;
-    font-size: 22px;
-    border-radius: 4px;
-    background-color: rgba(23, 23, 23, 0.2);
-    border: 1px solid rgba(246, 238, 238, 0.5);
-
 }
-
 
 .hero-buttons {
     display: flex;
@@ -153,74 +119,53 @@ nav button {
     justify-content: center;
     gap: 16px;
 }
-.hero-buttons input {
-    padding: 7px 120px 9px 19px;
-    color: white;
-    height: 99px;
-    width: 850px;
-    border-radius: 4px;
-    border: 1px solid rgba(246,238,238,0.5);
-    background-color: rgba(23,23,23,0.7);
-    font-size: 36px;
-}
 
-/* Make placeholder text larger */
-.hero-buttons input::placeholder {
-    font-size: 36px;
-    color: #ccc;
-}
-
-/* Make input value text large and bold */
-.hero-buttons input {
-    font-size: 36px;
-    font-weight: bold;
-}
-.main input{
-    padding: 7px 101px  8px 14px;
+.main input {
+    padding: 7px 101px 8px 14px;
     color: white;
     font-size: 12px;
     border-radius: 4px;
-    background-color: rgba(23,23,23,0.7);
-    border: 1px solid rgba(246,238,238,0.5);
+    background-color: rgba(23, 23, 23, 0.7);
+    border: 1px solid rgba(246, 238, 238, 0.5);
 }
 
-.first{
+.first {
     display: flex;
     justify-content: center;
-    max-width: 100vw;
+    max-width: 70vw;
     margin: auto;
     color: white;
     justify-content: center;
     align-items: center;
 }
 
-.secImg{
-    position: relative;
 
+
+.secImg {
+    position: relative;
 }
 
-.secImg img{
-    width: 1255px;
+.secImg img {
+    width: 555px;
     position: relative;
     z-index: 10;
 }
-.secImg video{
-    width: 1255px;
+
+.secImg video {
     position: absolute;
     top: 51px;
     right: 0;
-    /* z-index: 10; */
+    width: 555px;
 }
 
-section.first>div{
+section.first>div {
     display: flex;
     flex-direction: column;
     padding: 34px 0;
 }
 
-
 section.first>div :nth-child(1) {
-    font-size: 148px;
+    font-size: 48px;
     font-weight: bolder;
 }
 
@@ -230,29 +175,30 @@ section.first>div :nth-child(2) {
 
 }
 
-.faq h2{
+
+.faq h2 {
     text-align: center;
-    font-size: 72px;
+    font-size: 48px;
 }
 
-.faq{
+.faq {
     background: black;
     color: white;
     padding: 34px;
 }
 
-.faqbox:hover{
+.faqbox:hover {
     background-color: #414141;
     color: white;
 }
-.faqbox svg{
+
+.faqbox svg {
     filter: invert(1);
 }
 
-
 .faqbox {
     transition: all 1s ease-out;
-    font-size: 61px;
+    font-size: 24px;
     display: flex;
     justify-content: space-between;
     background-color: #2d2d2d;
@@ -264,16 +210,9 @@ section.first>div :nth-child(2) {
 
 footer {
     color: white;
-    max-width: 70vw;
+    max-width: 60vw;
     margin: auto;
-    padding: 90px;
-    
-    
-}
-footer .footer a {
-    font-size: 45px;
-    color: white;
-    text-decoration: none;
+    padding: 60px;
 }
 
 footer .questions {
@@ -285,65 +224,83 @@ footer .questions {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     color: white;
-    font-size: 88px;
 }
 
 
-@media screen and (max-width:1300px) {
+
+@media screen and (max-width: 1300px) {
+
     nav{
         max-width: 90vw;
     }
-    .first{
+
+    .first {
         flex-wrap: wrap;
     }
-    .secImg img{
-        width: 305px
-    }
-    .secImg video{
+
+    .secImg img {
         width: 305px;
     }
+
+    .secImg video {
+        width: 305px;
+    }
+
     .hero> :nth-child(1) {
-        font-size: 32px
+        font-size: 32px;
     }
-    .hero> :nth-child(2){
+
+    .hero> :nth-child(2) {
         font-size: 18px;
     }
-    .hero> :nth-child(3){
+
+    .hero> :nth-child(3) {
         font-size: 18px;
     }
-    .hero-buttons{
+
+    .hero-buttons {
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
         gap: 16px;
     }
-    .faq h2{
+
+    .faq h2 {
         text-align: center;
         font-size: 32px;
     }
-    footer{
+
+    footer {
         max-width: 90vw;
         padding: 75px 0;
     }
+
     .footer-item{
         align-items: center;
     }
+ 
+
 }
-@media screen and (max-width:1300px)  {
-    .footer{
+
+
+
+@media screen and (max-width: 1300px) {
+
+    .footer {
         display: grid;
         grid-template-columns: 1fr 1fr;
         gap: 25px;
     }
-    
-
 }
-.footer a{
+
+
+.footer a {
     font-size: 14px;
     color: white;
 }
-.footer-item{
+
+.footer-item {
     display: flex;
     flex-direction: column;
     gap: 23px;
